tests/compile-fail/pcap_socket_dropped_before_packet.rs
// use nethuns::sockets::Local;
// use nethuns::sockets::pcap::NethunsSocketPcap;
// use nethuns::types::NethunsSocketOptions;

// fn main() {
//     let opt = NethunsSocketOptions::default();
    
//     let socket = NethunsSocketPcap::<Local>::open(opt, "filename", false).unwrap();
    
//     let p1 = socket.read().unwrap();
//     let p2 = socket.read().unwrap();
//     println!("{:?} {:?}", p1, p2);
//     drop(socket);
//     drop(p1);
// }

// TODO
