tests/compile-fail/pcap_socket_dropped_before_packet.stderr
error[E0432]: unresolved import `nethuns::sockets::pcap`
 --> tests/compile-fail/pcap_socket_dropped_before_packet.rs:1:23
  |
1 | use nethuns::sockets::pcap::NethunsSocketPcap;
  |                       ^^^^ could not find `pcap` in `sockets`

warning: unused import: `nethuns::types::NethunsSocketOptions`
 --> tests/compile-fail/pcap_socket_dropped_before_packet.rs:2:5
  |
2 | use nethuns::types::NethunsSocketOptions;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
